--- a/eas.json
+++ b/eas.json
@@ -9,7 +9,7 @@
       "distribution": "internal"
     },
     "preview": {
-      "android":{
+      "android": {
         "buildType": "apk"
       },
       "ios": {
@@ -18,6 +18,10 @@
       "distribution": "internal"
     },
     "production": {
+      "distribution": "store",
+      "android": {
+        "buildType": "apk"
+      },
       "autoIncrement": true
     }
   },
