--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
+    "expo-module-scripts": "^4.1.10",
     "jest-expo": "~53.0.9",
     "typescript": "~5.8.3"
   },
